# sovereign-sdk

./: Cargo.toml
adapters/avail/: Cargo.toml
adapters/mock-da/src/: lib.rs
adapters/nodekit/: Cargo.toml  README.md
adapters/nodekit/src/: lib.rs  main.rs  service.rs  verifier.rs
adapters/nodekit/src/da_service/: service.rs
adapters/nodekit/src/da_spec/: spec.rs
adapters/nodekit/src/da_verifier/: verifier.rs
adapters/risc0/: Cargo.toml
examples/demo-rollup/: Cargo.toml
full-node/sov-sequencer/: Cargo.toml  README.md
full-node/sov-sequencer/src/: batch_builder.rs  lib.rs
module-system/sov-modules-api/: Cargo.toml
module-system/sov-modules-macros/: Cargo.toml
utils/zk-cycle-macros/: Cargo.toml
utils/zk-cycle-utils/: Cargo.toml
